tests/parsing/icnf/errors/002_assumption_bad_first_atom_1.expected
File "tests/parsing/icnf/errors/002_assumption_bad_first_atom_1.icnf", line 2, character 2-3:
2 | a p
      ^
Error while parsing an assumption, read the keyword 'p',
      but expected an atom, i.e. a non-zero integer.
